# ParallelKernelBench

./: .gitignore  README.md  pyproject.toml  run_local.py  run_modal.py  run_together.py
kernelgen/: generate_kernel.py  generate_kernel_agent.py  prompts.toml  solution_ex_add.py  solution_new_add_cuda.py  solutions_ex_allreduce.py  solutions_ex_alltoall.py  solutions_new_add_triton.py  solutions_new_allreduce_cuda.py  solutions_new_allreduce_parallelkittens.py  solutions_new_alltoall_parallelkittens.py
reference/: 10_embedding_lookup.py  11_allgather_gemm_AT.py  12_allgather_gemm.py  13_gemm_allreduce.py  14_gemm_allgather.py  15_combined_sharded_gemms.py  16_gemm_reducescatter.py  17_rope_allgather.py  18_tp_rms_norm.py  19_blocked_fp8_quantize.py  1_allreduce.py  20_blocked_fp8_dequantize.py  21_clip_grad_norm_no_ep.py  22_clip_grad_norm_ep.py  23_grad_acc_loss.py  24_load_balancing_loss_fn.py  25_importance_sampling_loss.py  26_moe_token_preprocess.py  27_moe_all2all_primitive.py  28_moe_pre_all2all.py  29_moe_post_all2all.py  2_allgather.py  30_moe_epgroupgemm_lora_backward.py  31_fused_moe_fwd.py  32_fused_moe_fwd_lora.py  33_ulysses_all_to_all_tensor_primitive.py  34_ulysses_all_gather_into_tensor_primitive.py  35_ulysses_all_gather_variable_primitive.py  36_ulysses_gather_seq_scatter_heads.py  37_ulysses_gather_heads_scatter_seq.py  38_ulysses_gather_seq_scatter_heads_qkv.py  39_ulysses_attention_e2e.py  3_broadcast.py  40_ddp.py  41_zero1_optimizer_shard.py  42_zero2_optimizer_shard_grad.py  43_fused_adam_grad_unshard_allgather.py  44_quantized_grad_allreduce.py  45_reducescatter_fused_rmsnorm.py  46_fsdp_adamw_sharded.py  (+49 more)
run_together/: worker.py
scripts/: worker.py
solutions_cuda_bf16_h100_8_anthropic_claude-opus-4-7/: 10_embedding_lookup_cuda.py  11_gemm_allgather_AT_cuda.py  12_gemm_allgather_cuda.py  13_gemm_allreduce_cuda.py  14_gemm_allscatter_cuda.py  15_combined_sharded_gemms_cuda.py  16_gemm_reducescatter_cuda.py  17_rope_allgather_cuda.py  18_rms_norm_cuda.py  19_blocked_fp8_quantize_cuda.py  1_allreduce_cuda.py  20_blocked_fp8_dequantize_cuda.py  21_clip_grad_norm_no_ep_cuda.py  22_clip_grad_norm_ep_cuda.py  23_grad_acc_loss_cuda.py  24_load_balancing_loss_fn_cuda.py  25_importance_sampling_loss_cuda.py  26_moe_token_preprocess_cuda.py  27_moe_all2all_primitive_cuda.py  28_moe_pre_all2all_cuda.py  29_moe_post_all2all_cuda.py  2_allgather_cuda.py  30_moe_epgroupgemm_lora_backward_cuda.py  31_fused_moe_fwd_cuda.py  32_fused_moe_fwd_lora_cuda.py  34_ulysses_all_to_all_tensor_primitive_cuda.py  35_ulysses_all_gather_into_tensor_primitive_cuda.py  36_ulysses_all_gather_variable_primitive_cuda.py  37_ulysses_gather_seq_scatter_heads_cuda.py  38_ulysses_gather_heads_scatter_seq_cuda.py  39_ulysses_gather_seq_scatter_heads_qkv_cuda.py  3_broadcast_cuda.py  40_ulysses_attention_e2e_cuda.py  41_ddp_cuda.py  42_zero1_optimizer_shard_cuda.py  43_zero2_optimizer_shard_grad_cuda.py  44_fused_adam_grad_unshard_allgather_cuda.py  47_fsdp_adamw_sharded_cuda.py  (+49 more)
(+305 files in other folders)
