[project]
name = "dulaj-pkb-cuda"
version = "0.1.0"
description = "ParallelKernelBench – multi-GPU kernel evaluation harness"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.49",
  "cffi",
  "cuda-core>=0.4",
  "cuda-pathfinder>=1.2.3",
  "google-generativeai>=0.8",
  "mini-swe-agent",
  "modal>=1.0",
  "mpi4py",
  "ninja",
  "numpy",
  "openai>=1.0",
  "pytest>=8",
  "requests>=2.28",
  "sprocket",
  "toml>=0.10",
  "together>=1.0",
  "torch>=2.9.0",
  "triton",
]

[tool.uv]
default-groups = []

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "together-pypi"
url = "https://pypi.together.ai/"
explicit = true

[tool.uv.sources]
mini-swe-agent = { git = "https://github.com/SWE-agent/mini-swe-agent.git" }
torch = { index = "pytorch-cu128" }
triton = { index = "pytorch-cu128" }
sprocket = { index = "together-pypi" }

# ---------------------------------------------------------------------------
# Jig image configuration
# ---------------------------------------------------------------------------
[tool.jig.image]
python_version = "3.12"
cmd = "python3 run_together/worker.py --queue"
copy = [
  "run_together/worker.py",
  "scripts/",  # TODO: for together evaluation you might need to copy over the solutions folder!
  "reference/",
  "utils/",
]

# APT deps – libibverbs-dev for nvshmem4py, build-essential for Triton JIT
system_packages = [
  "libibverbs-dev",
  "rdma-core",
  "build-essential",
  "wget",
  "xz-utils",
  "gnupg",
  "git",
]

# Build-time commands
run = [

  # Ensure gcc is available at runtime (Triton JIT needs a C compiler)
  "apt-get update -qq && apt-get install -y -qq gcc g++ > /dev/null 2>&1 || true",
  "which gcc && gcc --version | head -1",

  # Clone ThunderKittens (parallelkittens backend headers)
  "git clone --depth 1 https://github.com/HazyResearch/ThunderKittens.git /opt/thunderkittens",

]

# Image-level environment variables
[tool.jig.image.environment]
THUNDERKITTENS_ROOT = "/opt/thunderkittens"
LD_LIBRARY_PATH = "/opt/nvshmem/lib:/usr/local/cuda/lib64"
CUDA_HOME = "/usr/local/cuda"
PATH = "/usr/local/cuda/bin:/usr/bin:$PATH"
CC = "/usr/bin/gcc"
# Hopper-only JIT (see scripts/worker.py); avoids nvcc fat-binary sm_75 passes on Hopper-only sources.
TORCH_CUDA_ARCH_LIST = "9.0"

# ---------------------------------------------------------------------------
# Deployment configuration
# ---------------------------------------------------------------------------
[tool.jig.deploy]
description = "ParallelKernelBench – distributed GPU kernel evaluation"
gpu_type = "h100-80gb"
gpu_count = 1
cpu = 16
memory = 128
storage = 100
port = 8000
min_replicas = 0
max_replicas = 16
health_check_path = "/health"
termination_grace_period_seconds = 600

[tool.jig.autoscaling]
profile = "QueueBacklogPerWorker"
metric = "QueueBacklogPerWorker"
targetValue = "1.05"
